objects/JunoDoc__Doc_Template_Child__c/JunoDoc__Doc_Template_Child__c.object-meta.xml
<CustomObject>
    <label>Doc Template Related Object</label>
    <nameField>
        <displayFormat>DTC-{00000}</displayFormat>
        <label>Doc Template Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Template Related Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>