objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Aggregate_Query__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Aggregate_Query__c</fullName>
    <label>Aggregate Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>