objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Available_Fields__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Available_Fields__c</fullName>
    <label>Available Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>