objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Border__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Border__c</fullName>
    <label>Border</label>
    <length>255</length>
    <type>Text</type>
</CustomField>