objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Border_Width__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Border_Width__c</fullName>
    <label>Border Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>