objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Calculation_Fields__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Calculation_Fields__c</fullName>
    <label>Calculation Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>