objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Child_Group_By__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Child_Group_By__c</fullName>
    <label>Child Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>