objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Child_object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Child_object__c</fullName>
    <label>Related Object</label>
    <length>244</length>
    <type>Text</type>
</CustomField>