objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Color_1__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Color_1__c</fullName>
    <label>Color 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>