objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Doc_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template</label>
    <referenceTo>JunoDoc__Doc_Template__c</referenceTo>
    <relationshipName>Doc_Template_Childs</relationshipName>
    <type>Lookup</type>
</CustomField>