objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Filter__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Filter__c</fullName>
    <label>Filter</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>