objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Font_Color__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Font_Color__c</fullName>
    <label>Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>