objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Group_By_Calculation__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Group_By_Calculation__c</fullName>
    <label>Group By Calculation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>