objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Header_Colour_background__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Header_Colour_background__c</fullName>
    <label>Header Colour background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>