objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Header_style__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Header_style__c</fullName>
    <label>Header style</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>