objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Horizontal_Alignment__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Horizontal_Alignment__c</fullName>
    <label>Horizontal Alignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>