objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Padding__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Padding__c</fullName>
    <label>Padding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>