objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Render_Condition__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Render_Condition__c</fullName>
    <label>Render Condition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>