objects/JunoDoc__Doc_Template_Child__c/fields/JunoDoc__Table_grid__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Table_grid__c</fullName>
    <label>Table grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>